put all code into one module and call the module for comparisons

--- a/Comparisons.ipynb
+++ b/Comparisons.ipynb
@@ -8,9 +8,8 @@
    },
    "outputs": [],
    "source": [
-    "import kmeans_plusplus\n",
-    "import kmeans\n",
-    "import kmeans_parallel\n"
+    "import kmeans_combined\n",
+    "\n"
    ]
   },
   {
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -36,37 +35,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
-      "Wall time: 5.01 µs\n"
+      "CPU times: user 3 µs, sys: 1e+03 ns, total: 4 µs\n",
+      "Wall time: 6.91 µs\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.20645493,  0.85914291],\n",
-       "        [ 0.17353532,  0.16861052],\n",
-       "        [ 0.49920094,  0.2277433 ],\n",
-       "        [ 0.83061989,  0.15707222],\n",
-       "        [ 0.80504423,  0.85486585],\n",
-       "        [ 0.81811681,  0.49985593],\n",
-       "        [ 0.17836739,  0.51626564],\n",
-       "        [ 0.50654205,  0.70568153]]), array([6, 7, 7, ..., 3, 4, 1]))"
+       "(array([[ 0.16129586,  0.8330828 ],\n",
+       "        [ 0.48873952,  0.77677808],\n",
+       "        [ 0.16744315,  0.14724451],\n",
+       "        [ 0.21129196,  0.48924279],\n",
+       "        [ 0.82401592,  0.83883441],\n",
+       "        [ 0.49376972,  0.24655601],\n",
+       "        [ 0.82866347,  0.16021566],\n",
+       "        [ 0.79624906,  0.50393582]]), array([2, 0, 7, ..., 5, 5, 5]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%time\n",
-    "initial_1= kmeans_plusplus.kmeansplusplus(data,8,2)\n",
-    "kmeans.kmeans(data, initial_1,2)"
+    "initial_1= kmeans_combined.kmeansplusplus(data,8,2)\n",
+    "kmeans_combined.kmeans(data, initial_1,2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -75,32 +74,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "CPU times: user 3 µs, sys: 1e+03 ns, total: 4 µs\n",
       "Wall time: 5.96 µs\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(array([[ 0.78777032,  0.5024788 ],\n",
-       "        [ 0.51489759,  0.78726019],\n",
-       "        [ 0.16666698,  0.17634931],\n",
-       "        [ 0.5029635 ,  0.21683138],\n",
-       "        [ 0.1748594 ,  0.84405463],\n",
-       "        [ 0.84152381,  0.84177845],\n",
-       "        [ 0.22389816,  0.51625567],\n",
-       "        [ 0.83871693,  0.16395474]]), array([6, 1, 1, ..., 7, 5, 2]))"
+       "(array([[ 0.80099646,  0.50114319],\n",
+       "        [ 0.16406196,  0.83569843],\n",
+       "        [ 0.82627491,  0.15700418],\n",
+       "        [ 0.16969085,  0.14610732],\n",
+       "        [ 0.49339953,  0.25129603],\n",
+       "        [ 0.82297521,  0.83880471],\n",
+       "        [ 0.48924438,  0.77018762],\n",
+       "        [ 0.20429114,  0.4891405 ]]), array([3, 1, 0, ..., 4, 4, 4]))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%time\n",
-    "initial_2= kmeans_parallel.kmeansparallel(data,8,8,2)\n",
-    "kmeans.kmeans(data, initial_2,2)"
+    "initial_2= kmeans_combined.kmeansparallel(data,8,10,2)\n",
+    "kmeans_combined.kmeans(data, initial_2,2)"
    ]
   },
   {
