--- a/Parallelizing-K-means-Part-II.ipynb
+++ b/Parallelizing-K-means-Part-II.ipynb
@@ -148,14 +148,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The k-means$||$ algorithm intuitively similar to k-means++ except that it uses of an oversampling factor $l = \\Omega(k)$, and some linear function of $k$. By instead using k-means$||$, we are able to obtain a nearly optimal solution after only a logarithmic number of passes. In  k-means$||$, we sample a points uniformly at random from our oservations as an initial center and compute the cost of this clustering center. "
+    "The k-means$||$ algorithm is intuitively similar to k-means++ except that it uses of an oversampling factor $l = \\Omega(k)$, and some linear function of $k$. By instead using k-means$||$, we are able to obtain a nearly optimal solution after only a logarithmic number of passes. In  k-means$||$, we sample a point uniformly at random from our oservations as an initial center and compute the cost of this clustering center. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At each iteration, we then sample each observation in data set with some probability, and update the given cluster set with the by adding the sampled points. According to the sampling probability, the expected number of points sampled in each iteration is $l$. Thus, finally the expected number of points we sampled is $l$log$\\psi$, which will be greater than k. Thus, finally, we reduce the number of centers and assign weights to the points in the current cluster according to the number of observations which are closer to the given center than any other center."
+    "At each iteration, we then sample each observation in the data set with some probability, and update the given cluster se by adding the sampled points. According to the sampling probability, the expected number of points sampled in each iteration is $l$. Thus, finally the expected number of points we sampled is $l$log$\\psi$, which will be greater than k. Thus, finally, we reduce the number of centers and assign weights to the points in the current cluster according to the number of observations which are closer to the given center than any other center."
    ]
   },
   {
