generating data points

--- a/simulatedData.ipynb
+++ b/simulatedData.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -28,17 +28,15 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# set seed for reproducibility\n",
-    "#random.seed(32)\n",
-    "\n",
-    "def generate_centers(k):\n",
-    "    centers = np.random.multivariate_normal(np.zeros(3), np.diag([1,10,100]), 15)\n",
-    "    return centers[np.random.choice(15,k)]"
+    "def generate_centers(k, var):\n",
+    "    \"\"\"generate k centers from 15-dimensional spherical Gaussian distribution with the given variance\"\"\"\n",
+    "    centers = np.random.multivariate_normal(np.zeros(15),  np.eye(15)*var, k)\n",
+    "    return centers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -46,22 +44,54 @@
     {
      "data": {
       "text/plain": [
-       "array([[ -2.37786860e-04,  -3.69997210e+00,   7.11203104e+00],\n",
-       "       [ -6.46623726e-02,  -4.86166867e+00,  -1.04410098e+01],\n",
-       "       [  9.87029701e-01,   3.45370584e+00,  -6.78418622e-01],\n",
-       "       ..., \n",
-       "       [  6.00691828e-01,  -2.71261995e+00,  -8.75236442e+00],\n",
-       "       [  1.52490225e+00,  -1.80341642e+00,  -1.03257733e+01],\n",
-       "       [ -8.17502674e-01,  -7.10704466e-01,  -1.05211166e+01]])"
+       "array([-1.64019059,  2.95516057, -0.84902415,  0.39978204, -0.75684547,\n",
+       "        0.92141417, -0.36110127,  0.42137634,  2.34458034, -0.2474532 ,\n",
+       "        0.30578145,  0.24456234, -0.29499231, -0.11605867,  1.20579865])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "generate_centers(1000)"
+    "c=generate_centers(1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 15\n",
+    "def generate_data():\n",
+    "for i in range(k):\n",
+    "    np.random.multivariate_normal(c[0],np.eye(15),10)"
    ]
   },
   {
