still need to work out sampling for data points

--- a/simulatedData.ipynb
+++ b/simulatedData.ipynb
@@ -89,9 +89,12 @@
    ],
    "source": [
     "k = 15\n",
-    "def generate_data():\n",
+    "def generate_data(k, var):\n",
+    "# generate centers\n",
+    "centers = np.random.multivariate_normal(np.zeros(15),  np.eye(15)*var, k)\n",
+    "# generate data from each cluster\n",
     "for i in range(k):\n",
-    "    np.random.multivariate_normal(c[0],np.eye(15),10)"
+    "    np.random.multivariate_normal(c[k],np.eye(15),k)"
    ]
   },
   {
