added one more test

--- a/unitTests.ipynb
+++ b/unitTests.ipynb
@@ -129,7 +129,7 @@
     "        l=4\n",
     "        assert_almost_equal(sum(dist_prob_plus(data)),1) and assert_almost_equal(sum(dist_prob_parallel(data,l)),1)\n",
     "\n",
-    "def all_positive():\n",
+    "def test_all_positive():\n",
     "    for i in range(10):\n",
     "        data=np.random.random(size=10).tolist()\n",
     "        l=4\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -159,19 +159,19 @@
     "import numpy as np\n",
     "from numpy.testing import assert_almost_equal\n",
     "\n",
-    "def centroid_from_data():\n",
+    "def test_samplesize_is_k():\n",
     "    for i in range(10):\n",
     "        data = np.random.normal(size=(100,15))\n",
     "        k=10\n",
     "        d=15\n",
-    "        assert kmeansplusplus(data, k, d) in data\n",
+    "        assert_almost_equal(kmeansplusplus(data, k, d).shape[0], k)\n",
     "        \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -183,14 +183,15 @@
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
       "platform darwin -- Python 3.5.1, pytest-2.8.1, py-1.4.30, pluggy-0.3.1\n",
       "rootdir: /Users/wsswemily/Desktop/Sta663_Final_Project, inifile: \n",
-      "collected 12 items \n",
+      "collected 13 items \n",
       "\u001b[0m\n",
       "test_dist_prob_plus.py .\n",
       "test_dist_prob_plus_parallel.py .\n",
       "test_distance_sq.py .......\n",
+      "test_kmeansplusplus.py .\n",
       "test_point_sq.py ...\n",
       "\n",
-      "\u001b[1m\u001b[32m========================== 12 passed in 0.64 seconds ===========================\u001b[0m\n"
+      "\u001b[1m\u001b[32m========================== 13 passed in 1.04 seconds ===========================\u001b[0m\n"
      ]
     }
    ],
