finished data simulation

--- a/simulatedData.ipynb
+++ b/simulatedData.ipynb
@@ -20,23 +20,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "def generate_centers(k, var):\n",
-    "    \"\"\"generate k centers from 15-dimensional spherical Gaussian distribution with the given variance\"\"\"\n",
+    "    \"\"\"Generate k centers from 15-dimensional spherical Gaussian distribution with the given variance\"\"\"\n",
     "    centers = np.random.multivariate_normal(np.zeros(15),  np.eye(15)*var, k)\n",
     "    return centers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "k = 14\n",
+    "var = 1\n",
+    "def generate_data(k, var):\n",
+    "    \"\"\"Generate data points around each center such that there are 10,000 data points total including the centers?\n",
+    "    This could also be 10000 data points total plus the centers if this is better? Just chance the -k in \n",
+    "    the sampData line\"\"\"\n",
+    "    # generate centers\n",
+    "    centers = generate_centers(k, var)\n",
+    "    # array to store points #\n",
+    "    points = np.empty([1,15])\n",
+    "    # generate data around each center\n",
+    "    for i in range(k):\n",
+    "        points = np.concatenate((points, np.random.multivariate_normal(centers[i],np.eye(15),10000)), axis=0)\n",
+    "        points = np.delete(points, 0, axis=0)\n",
+    "    # sample points from array and combine these with centers\n",
+    "    sampData = np.concatenate((centers, points[np.random.choice(len(points),10000-k)]), axis = 0)\n",
+    "    return(sampData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -44,57 +69,51 @@
     {
      "data": {
       "text/plain": [
-       "array([-1.64019059,  2.95516057, -0.84902415,  0.39978204, -0.75684547,\n",
-       "        0.92141417, -0.36110127,  0.42137634,  2.34458034, -0.2474532 ,\n",
-       "        0.30578145,  0.24456234, -0.29499231, -0.11605867,  1.20579865])"
+       "10000"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c=generate_centers(1,1)"
+    "dataTest = generate_data(5, 1)\n",
+    "len(dataTest)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 0.34490313,  1.47640722, -0.20479856, ..., -0.56374699,\n",
+       "        -0.01397683,  1.49461564],\n",
+       "       [-0.32598796, -0.43453512, -0.23719422, ..., -0.55597661,\n",
+       "         0.24658277, -0.82942036],\n",
+       "       [ 0.31392337,  0.0368712 , -2.21039736, ...,  0.42039907,\n",
+       "        -1.51546845,  0.19296565],\n",
+       "       ..., \n",
+       "       [ 1.21763086,  0.53358594, -2.00541523, ...,  1.22377932,\n",
+       "         0.41006048,  1.31794368],\n",
+       "       [ 1.05810912,  0.09729648, -1.46184221, ..., -0.17054119,\n",
+       "        -0.29209923,  2.13367009],\n",
+       "       [ 0.76427846,  1.69106403,  1.00217724, ...,  0.23424215,\n",
+       "        -0.11713696,  2.39725367]])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "k = 15\n",
-    "def generate_data(k, var):\n",
-    "# generate centers\n",
-    "centers = np.random.multivariate_normal(np.zeros(15),  np.eye(15)*var, k)\n",
-    "# generate data from each cluster\n",
-    "for i in range(k):\n",
-    "    np.random.multivariate_normal(c[k],np.eye(15),k)"
+    "dataTest"
    ]
   },
   {
