made simulation py fn

--- a/simulatedData.ipynb
+++ b/simulatedData.ipynb
@@ -20,28 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting simulatedData.py\n"
+     ]
+    }
+   ],
    "source": [
+    "%%file simulatedData.py\n",
+    "\n",
     "def generate_centers(k, var):\n",
     "    \"\"\"Generate k centers from 15-dimensional spherical Gaussian distribution with the given variance\"\"\"\n",
     "    centers = np.random.multivariate_normal(np.zeros(15),  np.eye(15)*var, k)\n",
-    "    return centers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "k = 14\n",
-    "var = 1\n",
+    "    return centers\n",
+    "\n",
     "def generate_data(k, var):\n",
     "    \"\"\"Generate data points around each center such that there are 10,000 data points total including the centers?\n",
     "    This could also be 10000 data points total plus the centers if this is better? Just chance the -k in \n",
