--- a/simulatedData.ipynb
+++ b/simulatedData.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
    ],
    "source": [
     "%%file simulatedData.py\n",
-    "\n",
+    "import numpy as np\n",
     "def generate_centers(k, var):\n",
     "    \"\"\"Generate k centers from 15-dimensional spherical Gaussian distribution with the given variance\"\"\"\n",
     "    centers = np.random.multivariate_normal(np.zeros(15),  np.eye(15)*var, k)\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -71,19 +71,21 @@
        "10000"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import simulatedData\n",
+    "from simulatedData import generate_data\n",
     "dataTest = generate_data(5, 1)\n",
     "len(dataTest)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -91,22 +93,22 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.34490313,  1.47640722, -0.20479856, ..., -0.56374699,\n",
-       "        -0.01397683,  1.49461564],\n",
-       "       [-0.32598796, -0.43453512, -0.23719422, ..., -0.55597661,\n",
-       "         0.24658277, -0.82942036],\n",
-       "       [ 0.31392337,  0.0368712 , -2.21039736, ...,  0.42039907,\n",
-       "        -1.51546845,  0.19296565],\n",
+       "array([[ 0.094245  ,  1.24473561, -1.47416355, ..., -0.44821048,\n",
+       "         1.07509292,  1.23586155],\n",
+       "       [-0.00389113,  1.93824107,  1.29914844, ..., -0.21635323,\n",
+       "         0.52604057, -0.26825916],\n",
+       "       [ 0.89306542,  0.29696635,  0.58920778, ..., -1.85260025,\n",
+       "        -0.53139692, -0.03838707],\n",
        "       ..., \n",
-       "       [ 1.21763086,  0.53358594, -2.00541523, ...,  1.22377932,\n",
-       "         0.41006048,  1.31794368],\n",
-       "       [ 1.05810912,  0.09729648, -1.46184221, ..., -0.17054119,\n",
-       "        -0.29209923,  2.13367009],\n",
-       "       [ 0.76427846,  1.69106403,  1.00217724, ...,  0.23424215,\n",
-       "        -0.11713696,  2.39725367]])"
+       "       [ 0.25025571,  0.39828788,  1.19196379, ..., -1.63085116,\n",
+       "        -0.33179029, -0.58100716],\n",
+       "       [-0.77403546,  2.55487751, -2.87273788, ...,  0.31526968,\n",
+       "        -1.15896694,  0.32706329],\n",
+       "       [-1.03579483,  1.41657981, -1.47368661, ..., -1.10863183,\n",
+       "        -0.0482546 , -0.08539769]])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
