--- a/unitTests_revised.ipynb
+++ b/unitTests_revised.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -177,30 +177,135 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting test_kmeansplusplus.py\n"
+      "Overwriting test_kmeansplusplus_parallel.py\n"
      ]
     }
    ],
    "source": [
-    "%%file test_kmeansplusplus.py\n",
+    "%%file test_kmeansplusplus_parallel.py\n",
     "\n",
-    "from kmeans_combined_revised import kmeansplusplus\n",
+    "from kmeans_combined_revised import kmeansplusplus, kmeansparallel\n",
     "import numpy as np\n",
     "from numpy.testing import assert_almost_equal\n",
     "\n",
     "def test_samplesize_is_k():\n",
     "    for i in range(10):\n",
-    "        data = np.random.normal(size=(100,15))\n",
-    "        k=10\n",
+    "        data = np.random.normal(size=(1000,15))\n",
+    "        k=5\n",
     "        d=15\n",
-    "        assert_almost_equal(kmeansplusplus(data, k, d).shape[0], k)\n",
+    "        l=10\n",
+    "        assert_almost_equal(kmeansplusplus(data, k, d).shape[0], k) and assert_almost_equal(kmeansparallel(data, k,l,d).shape[0], k)\n",
+    "\n",
     "        \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting test_weights.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file test_weights.py\n",
+    "import numpy as np\n",
+    "from kmeans_combined_revised import weight_prob\n",
+    "\n",
+    "def test_all_positive_weights():\n",
+    "    for i in range(10):\n",
+    "        data = np.random.normal(size=(10,15))\n",
+    "        c = data[np.random.choice(range(10),5)]\n",
+    "        assert all(weight_prob(data, c))>=0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting test_reassign_centroids.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file test_reassign_centroids.py\n",
+    "import numpy as np\n",
+    "from kmeans_combined_revised import reassign_centroids, weight_prob\n",
+    "\n",
+    "def test_more_given_centroids_than_reassigned():\n",
+    "    for i in range(10):\n",
+    "        data = np.random.normal(size=(1000,15))\n",
+    "        c = data[np.random.choice(range(10),15)]\n",
+    "        w=weight_prob(data,c)\n",
+    "        assert reassign_centroids(c,5,15,w).shape[0]<c.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting test_kmeans.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file test_kmeans.py\n",
+    "import numpy as np\n",
+    "from kmeans_combined_revised import kmeans, kmeansparallel\n",
+    "\n",
+    "def test_kmeans_shape():\n",
+    "    for i in range(10):\n",
+    "        data = np.random.normal(size=(1000,15))\n",
+    "        k=5\n",
+    "        d=15\n",
+    "        l=10\n",
+    "        initial=kmeansparallel(data,k,l,d)\n",
+    "        assert kmeans(data,initial,k,d).shape[0]==k\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from kmeans_combined_revised import kmeans, kmeansparallel\n",
+    "data = np.random.normal(size=(1000,15))\n",
+    "print(data)\n",
+    "k=5\n",
+    "d=15\n",
+    "l=10\n",
+    "i=kmeansparallel(data,k,l,d)\n",
+    "kmeans(data,i,k,d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -212,16 +317,52 @@
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
       "platform darwin -- Python 3.5.1, pytest-2.8.1, py-1.4.30, pluggy-0.3.1\n",
       "rootdir: /Users/wsswemily/Desktop/Sta663_Final_Project, inifile: \n",
-      "collected 15 items \n",
+      "collected 19 items \n",
       "\u001b[0m\n",
       "test_dist_prob_plus.py .\n",
       "test_dist_prob_plus_parallel.py ..\n",
       "test_distance_sq.py .......\n",
+      "test_kmeans.py F\n",
       "test_kmeansplusplus.py .\n",
+      "test_kmeansplusplus_parallel.py .\n",
       "test_log_cost.py .\n",
       "test_point_sq.py ...\n",
+      "test_reassign_centroids.py .\n",
+      "test_weights.py .\n",
       "\n",
-      "\u001b[32m\u001b[1m========================== 15 passed in 1.14 seconds ===========================\u001b[0m\n"
+      "=================================== FAILURES ===================================\n",
+      "______________________________ test_kmeans_shape _______________________________\n",
+      "\n",
+      "\u001b[1m    def test_kmeans_shape():\u001b[0m\n",
+      "\u001b[1m        for i in range(10):\u001b[0m\n",
+      "\u001b[1m            data = np.random.normal(size=(1000,15))\u001b[0m\n",
+      "\u001b[1m            k=5\u001b[0m\n",
+      "\u001b[1m            d=15\u001b[0m\n",
+      "\u001b[1m            l=10\u001b[0m\n",
+      "\u001b[1m            initial=kmeansparallel(data,k,l,d)\u001b[0m\n",
+      "\u001b[1m>           assert kmeans(data,initial,k,d).shape[0]==k\u001b[0m\n",
+      "\n",
+      "test_kmeans.py:11: \n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "kmeans_combined_revised.py:137: in kmeans\n",
+      "\u001b[1m    l= getLabels(dataSet, centroids)\u001b[0m\n",
+      "kmeans_combined_revised.py:161: in getLabels\n",
+      "\u001b[1m    l.append(np.argmin(list(dist_sq(dataSet[i],c) for c in centroids)))\u001b[0m\n",
+      "kmeans_combined_revised.py:161: in <genexpr>\n",
+      "\u001b[1m    l.append(np.argmin(list(dist_sq(dataSet[i],c) for c in centroids)))\u001b[0m\n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "\n",
+      "a = array([-1.22338437,  0.52258434, -2.49295657,  0.12647868, -0.81774145,\n",
+      "        1.27814801,  0.54512947, -0.50867663, -0.23309849, -0.17775193,\n",
+      "       -0.10416284,  0.41900527,  1.27803868, -0.14239928,  1.74140157])\n",
+      "b = array([ 0.1480975 , -0.24398276])\n",
+      "\n",
+      "\u001b[1m    def dist_sq(a, b):\u001b[0m\n",
+      "\u001b[1m>       return np.sum((a-b)**2)\u001b[0m\n",
+      "\u001b[31m\u001b[1mE       ValueError: operands could not be broadcast together with shapes (15,) (2,)\u001b[0m\n",
+      "\n",
+      "kmeans_combined_revised.py:8: ValueError\n",
+      "\u001b[31m\u001b[1m===================== 1 failed, 18 passed in 4.84 seconds ======================\u001b[0m\n"
      ]
     }
    ],
